; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_ess.c_cms_msgSigDigest_add1.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_ess.c_cms_msgSigDigest_add1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVP_MAX_MD_SIZE = common dso_local global i32 0, align 4
@CMS_F_CMS_MSGSIGDIGEST_ADD1 = common dso_local global i32 0, align 4
@CMS_R_MSGSIGDIGEST_ERROR = common dso_local global i32 0, align 4
@NID_id_smime_aa_msgSigDigest = common dso_local global i32 0, align 4
@V_ASN1_OCTET_STRING = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cms_msgSigDigest_add1(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32, i32* @EVP_MAX_MD_SIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %6, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %7, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @cms_msgSigDigest(i32* %14, i8* %13, i32* %8)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* @CMS_F_CMS_MSGSIGDIGEST_ADD1, align 4
  %19 = load i32, i32* @CMS_R_MSGSIGDIGEST_ERROR, align 4
  %20 = call i32 @CMSerr(i32 %18, i32 %19)
  store i32 0, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %33

21:                                               ; preds = %2
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* @NID_id_smime_aa_msgSigDigest, align 4
  %24 = load i32, i32* @V_ASN1_OCTET_STRING, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @CMS_signed_add1_attr_by_NID(i32* %22, i32 %23, i32 %24, i8* %13, i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %21
  %29 = load i32, i32* @CMS_F_CMS_MSGSIGDIGEST_ADD1, align 4
  %30 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %31 = call i32 @CMSerr(i32 %29, i32 %30)
  store i32 0, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %33

32:                                               ; preds = %21
  store i32 1, i32* %3, align 4
  store i32 1, i32* %9, align 4
  br label %33

33:                                               ; preds = %32, %28, %17
  %34 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %34)
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @cms_msgSigDigest(i32*, i8*, i32*) #2

declare dso_local i32 @CMSerr(i32, i32) #2

declare dso_local i32 @CMS_signed_add1_attr_by_NID(i32*, i32, i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
